# whisper-ptt

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  config.ini  pyproject.toml  requirements-convert.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
ahk/: WhisperPTT.ahk
dotnet/WhisperPTT.Companion/: App.xaml  App.xaml.cs  WhisperPTT.Companion.csproj
dotnet/WhisperPTT.Companion/Core/: AppPaths.cs  BackendClient.cs  BackendLifecycle.cs  HardwareProbe.cs  HfDownloader.cs  IniFile.cs  ModelCatalog.cs
dotnet/WhisperPTT.Companion/UI/: SettingsWindow.xaml  SettingsWindow.xaml.cs  SetupWizard.xaml  SetupWizard.xaml.cs  TrayHost.cs
installer/: backend_entry.py  whisper-ptt.iss
scripts/: download_model.ps1  probe_devices.py  probe_media.py
src/whisper_ptt/: __init__.py  __main__.py  audio.py  cleanup.py  config.py  logging_setup.py  media.py  model_fetch.py  postprocess.py  server.py  transcriber.py
